--- a/urbanthreads/store/templates/store/home.html
+++ b/urbanthreads/store/templates/store/home.html
@@ -67,28 +67,28 @@
     <main class="page blog-post" style="padding-top: 0px; height: auto">
       <div class="row" style="margin: 0px">
         <div class="col-md-3" style="padding: 5px">
-          <a href="{% url 'store:products' 1 %}"
+          <a href="{% url 'store:products' 'M' %}"
             ><img
               src="https://cdn.jsdelivr.net/gh/StaticUser123/UT@main/assets/img/Men_10.webp"
               style="width: 100%"
           /></a>
         </div>
         <div class="col-md-3" style="padding: 5px">
-          <a href="{% url 'store:products' 2 %}"
+          <a href="{% url 'store:products' 'W' %}"
             ><img
               src="https://cdn.jsdelivr.net/gh/StaticUser123/UT@main/assets/img/Women_11.webp"
               style="width: 100%"
           /></a>
         </div>
         <div class="col-md-3" style="padding: 5px">
-          <a href="{% url 'store:products' 3 %}"
+          <a href="{% url 'store:products' 'B' %}"
             ><img
               src="https://cdn.jsdelivr.net/gh/StaticUser123/UT@main/assets/img/boys_6.webp"
               style="width: 100%"
           /></a>
         </div>
         <div class="col-md-3" style="padding: 5px">
-          <a href="{% url 'store:products' 4 %}"
+          <a href="{% url 'store:products' 'G' %}"
             ><img
               src="https://cdn.jsdelivr.net/gh/StaticUser123/UT@main/assets/img/Girls_6.webp"
               style="width: 100%"
