--- a/urbanthreads/templates/base.html
+++ b/urbanthreads/templates/base.html
@@ -99,9 +99,9 @@
               </div>
               <div class="tab-pane" role="tabpanel" id="tab-3">
                   <p style="padding-top: 15px;font-weight: bold;">Catagory</p>
-                  <div style="padding-left: 10px;"><a href="{% url 'store:products' 3 %}">
+                  <div style="padding-left: 10px;"><a href="{% url 'store:products' 'B' %}">
                           <p style="font-weight: bold;color: var(--bs-yellow);">BOYS<br></p>
-                      </a><a href="{% url 'store:products' 4 %}">
+                      </a><a href="{% url 'store:products' 'G' %}">
                           <p style="font-weight: bold;color: var(--bs-pink);">GIRLS<br></p>
                       </a></div>
               </div>
