--- a/urbanthreads/accounts/templates/accounts/profile.html
+++ b/urbanthreads/accounts/templates/accounts/profile.html
@@ -53,7 +53,7 @@
               {% for cart_item in cart %}
               <h4>
                 <a
-                  href="{% url 'store:product_detail' cart_item.product_catagory cart_item.pk_product  %}"
+                  href="{% url 'store:product_detail'  cart_item.pk_product  %}"
                   ><span class="text"
                     >{{ cart_item.name }} {{ cart_item.product_category }}</span
                   ></a
@@ -68,7 +68,8 @@
                   ></i
                 ></a>
               </h4>
-              {% endfor %} {% else %}
+              {% endfor %} 
+              {% else %}
               <p>Your cart is empty.</p>
               {% endif %}
             </div>
