--- a/urbanthreads/store/templates/store/product-page.html
+++ b/urbanthreads/store/templates/store/product-page.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-
+<!-- product page -->
 <main class="page product-page" style="background: rgb(255, 255, 255)">
   <section
     class="clean-block clean-product dark"
@@ -33,7 +33,7 @@
                 </h5>
                 <div class="price" style="border-top-style: solid">
                   <a
-                    href="{% url 'accounts:cart' product.pk product.catagory product.name  %}"
+                    href="{% url 'accounts:cart' product.pk product.category product.name  %}"
                   >
                     <button
                       class="btn"
@@ -44,7 +44,7 @@
                     </button>
                   </a>
                   <a
-                    href="{% url 'accounts:checkout' product.pk product.catagory product.name product.price %}"
+                    href="{% url 'accounts:checkout' product.pk 'product.category' 'product.name' product.price %}"
                   >
                     <button
                       class="btn btn-primary"
