fix errors and change account's model design

--- a/urbanthreads/store/templates/store/product-page.html
+++ b/urbanthreads/store/templates/store/product-page.html
@@ -44,7 +44,7 @@
                     </button>
                   </a>
                   <a
-                    href="{% url 'accounts:checkout' product.pk 'product.category' 'product.name' product.price %}"
+                    href="{% url 'accounts:checkout' product.pk product.category product.name %}"
                   >
                     <button
                       class="btn btn-primary"
